# pizarra-gtk

./: .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  debpackage.sh  deploy.sh  flake.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: c9p7p3mgi0wvymm2fc3knx0z4nnk5sb1-source  f2yl9baklsgk87qgdpssqkcb6nb2zjlx-source
locales/: TODO.yml  en.mo  en.po  es.po  messages.pot
res/: layout.glade  pizarra.desktop  pizarra.glade
scripts/: release-aur-bin.sh  release-aur-git.sh
src/: config.rs  graphics.rs  logic.rs  main.rs
wix/: License.rtf  main.wxs  settings.ini
