[package]
name = "pizarra"
description = "Tu pizarrón virtual de confianza"
documentation = "https://pizarra.categulario.tk"
homepage = "https://pizarra.categulario.tk"
repository = "https://gitlab.com/categulario/pizarra-gtk"
license-file = "LICENSE"
edition = "2021"
authors = ["Abraham Toriz <categulario@gmail.com>"]
version = "1.7.2"

[dependencies]
gdk = "0.15"
glib = "0.10"
pizarra = "2.0.4"
env_logger = "0.9"
directories = "3"
toml = "0.5"

[dependencies.cairo-rs]
version = "0.15"
features = ["svg", "png"]

[dependencies.gtk]
version = "0.15"
features = ["v3_22"]

[dependencies.gio]
version = "0.15"
[target."cfg(windows)".build-dependencies]
winres = "0.1"
